# mimitech-ai

./: .gitignore  .pre-commit-config.yaml  AGI_MISSIONS.md  AGI_TRAINING_MASTER_PLAN.md  AGI_TYPE_GENERATOR.py  AKTUALISIERTER_IMPLEMENTIERUNGSPLAN.md  BEDARFSANALYSE.md  BEDARFSANALYSE_AKTUALISIERT.md  BLOCKER_RESOLUTION_PRISM_ENGINE.md  BLOCKER_RESOLUTION_T_MATHEMATICS.md  CHANGELOG.md  CORE.js  DATA_CARD.md  DATA_POLICIES.md  DEPLOYMENT_RUNBOOK.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  Dockerfile  FIELD_MAPPING_TABLE.md  FINAL_SYSTEM_CHECKLIST.md  IMPLEMENTIERUNGSPLAN_666.md  IMPLEMENTIERUNGSPLAN_KONSOLIDIERT.md  INVESTOR_DOCS_COMPLETE.md  INVESTOR_README.md  LIVE_DOCUMENTATION_STATUS.md  METRIC_CONTRACT.md  MIGRATION_GUIDE_BENCHMARK_SCHEMA.md  MISO_DEPENDENCY_MAPPING.md  MISO_ULTIMATE_INVESTMENT_PROSPECTUS.md  MISO_ULTIMATE_INVESTMENT_PROSPECTUS_PART2.md  Makefile  OTEL_MONITORING_INTEGRATION.md  PARADOXAUFLOESUNG_SPEZIFIKATION.md  PDCA_PLAN_VXOR.md  PHASE_MAKE_IT_WORK_TIGHTEN_COMPLETE.md  PROOF_OF_POINT_WAHRHEITSGETREU.md  QS_BERICHT.md  QS_BERICHT_FINAL.md  QUANTUM_BACKEND_BENCHMARKS.md  README.md  (+214 more)
.github/: PULL_REQUEST_TEMPLATE.md
.venv-mps311/: pyvenv.cfg
agents/: __init__.py
agi_missions/: ._canary_deployment_results_20250803_041641.json  GO_LIVE_SNAPSHOT_RUNBOOK.md  ab_test_report.yaml  agi_mission_1_results_20250803_032932.json  agi_mission_executor.py  agi_training_mission.py  automated_deploy_canary.py  canary_deployment_executor.py  canary_deployment_results_20250803_041641.json  canary_deployment_results_20250803_041830.json  canary_deployment_results_20250803_042030.json  canary_deployment_results_20250803_042410.json  canary_deployment_results_20250803_042659.json  compare_transfer_baselines.py  continuous_agi_training_daemon.py  continuous_training_config.json  deployment_decision_report.md  finetuning_results_v2.1_20250803_042003.json  generate_baseline_data.py  integrated_miso_dashboard.py  live_dashboard.py  mission_1_definition.json  new_baseline.json  old_baseline.json  optimized_transfer_mission_executor.py  optimized_transfer_mission_results_20250803_034130.json  production_config_v2.0.yaml  production_config_v2.1.yaml  production_finetuning_v2.1.py  production_live_monitor.py  simple_web_dashboard.py  smoke_test_daemon.py  specialized_training_menu.py  start_all_daemons.sh  start_miso_training_local.py  start_production_monitoring.sh  training_dashboard.py  transfer_mission_1_definition.json  transfer_mission_1_results_20250803_033632.json  transfer_mission_executor.py  (+2 more)
bench/: README_arc_glue.md  README_cajal_scheibel.md  README_linear_solver.md  README_vxor_adapters.md  __init__.py  arc_categories.example.json  arc_eval.py  glue_eval.py  lin_solve_last_green.json  quantum_linear_eval.py
benchmark/: vxor_latency_benchmark.py  vxor_latency_benchmark_fixed.py
config/: ports.py
core/: __init__.py  config.py
css/: vxor-dashboard.css
dashboard-frontend/: index-minimal.html  index.html  minimal-dashboard.html  simple-dashboard.html  tailwind.config.js  test.html
datasets/: matrix_10x10.allow  quantum_50x50.allow  real165.allow
debug/: mlx_jit_control.py
docs/: CONTACT_TEMPLATES.md  DEVELOPER_GUIDE_ENTRY_POINTS.md  ENTRY_POINT_CICD_INTEGRATION_GUIDE.md  ENTRY_POINT_CODE_REVIEW_CHECKLIST.md  ENTRY_POINT_CONVENTION.md  ETHICS_SAFETY.md  EVAL_PROTOCOL.md  IST_ZUSTAND_ANALYSE.md  MLX_OPTIMIERUNG_NÄCHSTE_SCHRITTE.md  MLX_OPTIMIZATION_REPORT.md  MLX_VALIDIERUNG.md  NDA_TEMPLATE.md  RELEASE_GATE_POLICY.md  RESULTS.md  implementierungsplan_666.md  release_notes_rc1.md
engines/: __init__.py
eval/: Dockerfile  requirements.txt
examples/: m_lingua_t_mathematics_demo.py
investor_docs/: 01_executive_summary.md  02_validation_report.md  04_technical_architecture.md  05_pitchdeck_factsheets.md
js/: VXORAuth.js  VXORMLPerf.js  VXORMatrix.js  VXORModuleLoader.js  VXORQuantum.js  VXORSWEBench.js  VXORSecurity.js  VXORTMath.js  VXORUtils.js  asset-optimizer.js  lazy-ui-components.js  performance-benchmark-v2.js  test-data.js  vxor-lazy-loader.js  vxor-test-runner.js
lang/: __init__.py
math_module/: __init__.py
mcp_adapter/: README.md  __init__.py  discovery.py  openapi_fusion.py  server.py  websocket_bridge.py
miso/: __init__.py  m_lingua_t_math_bridge.py
monitoring/: ztm_monitor.py
optimization/: gpu_acceleration_benchmark.py  guaranteed_success_system.py  quantum_fidelity_enhancer.py  real_world_benchmarks.py
resources/: vxor_icon.icns
schemas/: bench_result.schema.json  benchmark_report.schema.json
scripts/: DROP_IN_OPTIMIZATION_GUIDE.md  _csv2jsonl_map.yaml  add_training_enhancements.py  beta_feedback_system.py  build_container.sh  checkpoint_manager.py  contamination_detector.py  create_golden_baseline.py  create_tokenized_cache.py  detect_drift.py  distillation_merger.py  (+57 more)
(+793 files in other folders)
